# non-answer-generator

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
example/: config.json
src/: main.rs
src/markov/: mod.rs  word.rs
