[package]
name = "non-answer-generator"
version = "0.1.1"
authors = ["cnsumner <cnsumner@users.noreply.github.com>"]

[dependencies]
config = "0.9.0"
rand = "0.5.5"
regex = "1.0.2"
serenity = "0.5.8"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
typemap = "0.3.3"
openssl-probe = "0.1.2"
indexmap = {version = "1.0.1", features = ["serde-1"]}
